# navigation_2d_spot

./: CMakeLists.txt  README.md  package.xml
action/: NavigateToGoal.action
common/: domain_spot.pddl  plan.pddl  problem.pddl
common/no_move_base/: domain_spot.pddl  plan.pddl  problem.pddl
config/: waypoints.yaml
launch/: depth_to_point.launch  navigate_no_move.launch  octomap_map.launch  plan_navigation.launch  plan_navigation_no_move.launch  slam.launch  upload_plan.launch
launch/demo/: demo_navigate.launch  demo_slam.launch  save_maps_demo.launch
launch/include/: gmapping.launch  move_base.launch
maps/: map.yaml
maps/broke/: lab.ot  map.pgm
maps/broken ot/: map.pgm
octomap_maps/: construction_octomap.bt  construction_octomap.ot  drone_map.bt  drone_map.ot  lab.bt  lab_big.ot  ocean_lab.ot  och_lab.ot
scripts/: action_server_navigate.py  dynamic_reconfiguration.py  explore_wp.bash  init.py  localize_client.py  localize_server.py  move_trajectory_cmd.py  navigate_to_action.py  plan.py  replan.py  replan_no_move.py  save_fiducials.py  spin_in_circle.py  spot_go_to_point.bash  sub.py  test_move_trajectory.py  test_rosplan.py  update_goal_tolerance.py  use_fiducial.py  use_fiducial_test.py
scripts/testing/: test.py  test_move.py
src/: RPLocalize.cpp  RPNavigate.cpp  simplified_velodyne.cpp
src/include/: RPLocaliser.h  RPNavigate.h
srv/: DynamicParamsDouble.srv  GoalSpotTrajectory.srv
