<?xml version="1.0"?>
<package>
  <name>navigation_2d_spot</name>
  <version>0.1.0</version>
  <description>Autonomous mapping and navigation for spot</description>

  <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>
  <author>Juan Miguel Jimeno</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>amcl</run_depend>
  <run_depend>frontier_exploration</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>dwa_local_planner</run_depend>
  <build_depend>velodyne_pointcloud</build_depend>
  <build_depend>velodyne_pcl</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>velodyne_pointcloud</run_depend>  
  <run_depend>velodyne_pcl</run_depend>  

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>


  <export>
  </export>
</package>
